# LLMStrat

./: .env.example  .gitignore  Dockerfile  README.md  bootstrap.sh  docker-compose.yaml  launcher.py  mypy.ini  pyproject.toml  requirements.txt  run.sh
configs/: .env.example  backtest.yaml  backtest_optimized.yaml  backtest_paper_baseline.yaml  backtest_paper_best.yaml  backtest_paper_improved.yaml  backtest_sp500_research.yaml  experiment.yaml  experiment_paper_best.yaml  live_sp500.yaml  llm_sp500.yaml  paper.yaml  paper_sp500.yaml  trading.yaml
docs/: PROJECT_STRUCTURE.md  conf.py  experiment_guide.md  experiment_hyperparameters.md  index.rst  ops_runbook.md  paper_to_live_checklist.md  research_protocol.md  retail_strategy_guide.md  user_guide.md
frontend-v2/: QUICKSTART.md  README.md  index.html  start.sh
gym_notices/: __init__.py  notices.py
hf_data/: README.md
quantaalpha/: cli.py
quantaalpha_us/: __init__.py  paths.py
requirements/: trading.txt
scripts/: kill_switch.py  run_baseline_then_upgraded.sh  run_locked_upgrade_suite.py  run_oos_sweep.py  run_paper_best_repro.sh  sp500_backfill_history.py  sp500_build_membership.py  sp500_build_membership_approx.py  sp500_daily_report.py  sp500_data_coverage_report.py  sp500_generate_signals.py  sp500_ingest_daily.py  sp500_orchestrator.py  sp500_run_factor_mining.py  sp500_run_research.py  trade_once.py
tests/: conftest.py  test_backtest_validation.py  test_broker.py  test_cost_model.py  test_data_quality.py  test_engine.py  test_enhanced_portfolio.py  test_eodhd_client.py  test_expr_parser.py  (+20 more)
(+86 files in other folders)
