[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "setuptools-scm",
]

[project]
authors = [
  {email = "noreply@users.noreply.github.com", name = "Alexander Roesler"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
description = "LLMStrat - LLM-Driven Alpha Factor Mining Agent"
dynamic = [
  "dependencies",
  "optional-dependencies",
  "version",
]
keywords = [
  "Quantitative Finance",
  "Factor Mining",
  "Large Language Models",
  "Autonomous Agents",
]
name = "llmstrat"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
quantaalpha = "quantaalpha.cli:app"
llmstrat = "quantaalpha.cli:app"

[project.urls]
homepage = "https://github.com/Aroesler1/LLMStrat"
issue = "https://github.com/Aroesler1/LLMStrat/issues"

[tool.setuptools]
packages = {find = {where = ["."]}}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
docs = {file = ["requirements/docs.txt"]}

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_scheme = "guess-next-dev"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E9", "F63", "F7"]
